DERBY-4804: Make database used in store.OSReadOnlyTest fully read-only
Followup patch moving file operation code into PrivilegedFileOpsForTests,
since it is probably useful for other tests as well.
Also note the new assert-method in BaseJDBCTestCase, used to assert that a
directory is fully deleted.

Patch file: derby-4804-2a-common_file_ops.diff



git-svn-id: https://svn.apache.org/repos/asf/db/derby/code/trunk@999796 13f79535-47bb-0310-9956-ffa450edef68